kubernetes/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: dadrix
  labels:
    tier: website
    app: website
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: website
      app: website
  template:
    metadata:
      labels:
        tier: website
        app: website
    spec:
      imagePullSecrets:
      - name: gitlab-registry
      containers:
      - name: website
        image: ${CI_REGISTRY_IMAGE}:${CI_COMMIT_SHORT_SHA}
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
